--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.11.14",
+    "asyncio>=3.4.3",
     "fastapi[standard]>=0.115.12",
     "pydantic>=2.10.6",
 ]
