feat: adding python wrapper for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - POSTGRES_DB=agentea
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./migrations/versions:/docker-entrypoint-initdb.d
     restart: unless-stopped
     networks:
       - agentea_network
