--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "psycopg[binary,pool]>=3.2.6",
     "pydantic>=2.10.6",
     "pydantic-settings>=2.8.1",
 ]
