chore: update postgres version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - agentea_network
 
   postgres:
-    image: postgres:latest
+    image: postgres:17-alpine
     ports:
       - "5432:5432"
     environment:
