--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,13 @@ repos:
   # Ruff version.
   rev: v0.11.2
   hooks:
+      # Sort imports.
+    - id: ruff
+      name: ruff-isort
+      args: [ --select, I, --fix ]
     # Run the linter.
     - id: ruff
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
+
